styles.css
body {
    background-color: #839fad;
}
h1 {
    color: #915230;
    text-shadow: -3px 3px rgb(3, 5, 29);
    font-family: Arial, Helvetica, sans-serif; 
    font-size: 68px; 
    text-align: center;
}

.center {
    height: auto;
    width: 100%;
    display: block;
    }

h3 {
    color: #915230;
    text-shadow: -2px 2px rgb(3, 5, 29);
    font-family: Arial, Helvetica, sans-serif; 
    font-size: 36px; 
    text-align: center;
}

.container {
    display: flex;
}

.recipe {
    
    color: #915230;
    text-shadow: -1px 1px rgb(3, 5, 29);
    font-size: 26px;
   }

.a:visited {
    color: #000;
}

